--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
-},
+  },
   "dependencies": {
-    "csv-parse": "^5.3.1",
+    "csv-parse": "^4.15.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.5.0",
+    "tsyringe": "^4.7.0",
     "typeorm": "0.2.45"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
